kubernetes/apps/default/redlib/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app redlib
  labels:
    app: *app
spec:
  selector:
    matchLabels:
      app: *app
  replicas: 1
  template:
    metadata:
      labels:
        app: *app
    spec:
      containers:
        - name: *app
          image: quay.io/redlib/redlib:sha-3677ca1
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
      restartPolicy: Always
