kubernetes/apps/default/redlib/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app redlib
spec:
  selector:
    app: *app
  ports:
    - protocol: TCP
      port: 8080
