kubernetes/apps/default/redlib/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app redlib
spec:
  rules:
    - host: r.4kb.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: *app
                port:
                  number: 8080
